--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.3",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
+    "expo-constants": "~13.1.1",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.9.0",
     "react": "17.0.2",
     "react-devtools": "^4.24.7",
     "react-dom": "17.0.2",
