--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "resolutions": {
     "react-devtools-core": "4.14.0"
